[package]
name = "aisph"
description = "Asynchronous Interactive Singleton Process Handler"
authors = ["Drew Chase"]
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.0", features = ["macros", "process", "sync", "rt", "io-std", "io-util", "rt-multi-thread", "time"] }
anyhow = "1.0.98"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
libc = "1.0.0-alpha.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "1.0.0-alpha.1" }
