[package]
name = "tokio-interactive"
description = "Asynchronous Interactive Process Management with Tokio"
authors = ["Drew Chase"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Drew-Chase/tokio-interactive.git"
readme = "README.md"

[dependencies]
tokio = { version = ">=1.40", features = ["macros", "process", "sync", "rt", "io-std", "io-util", "rt-multi-thread", "time"] }
anyhow = ">=1.0"
log = ">=0.4"
serde = { version = ">=1.0", features = ["derive"] }
pretty_env_logger = { version = "0.5.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = ">=0.3", features = ["processthreadsapi", "handleapi", "errhandlingapi", "wincon"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = ">=0.2" }

[features]
default = []
debug = ["dep:pretty_env_logger"]